--- a/nav.css
+++ b/nav.css
@@ -143,37 +143,22 @@ width:300px;left:50%;right:auto;margin-left:-150px
 overflow:hidden;clip:rect(0,0,0,0);height:0;
 }
 }
+#topPagination .page-counter{
+color:#000000;
+}
 #siteNav,.pagination a,#skipNav,#nav-toggler{
 /*navFontSize*/
 font-size:110%;
 }
 #siteNav,#siteNav a{
 /*navAColor*/
-color:#ff0000;
-/*navBorderColor*/
-border-color:#000000;
-}
-@media screen and (min-width: 701px) and (max-width: 1015px){
-#siteNav,#siteNav ul{
-border-color:#000000;
-}
-}
-#siteNav a:hover,#siteNav a:focus,#siteNav a.active{
-/*navHoverBGColor*/
-background-color:#cccccc;
-/*navAHoverColor*/
-color:#ffffff;
-}
-@media screen and (min-width: 701px) and (max-width: 1015px){
-#siteNav li:hover,#siteNav li.sfhover{
-background-color:#cccccc;
-}
+color:#000000;
 }
 .pagination{
 border-color:#dddddd;
 }
 #bottomPagination .page-counter{
-color:#ffffff;
+color:#0a0000;
 }
 /*horizontalNavigation*/
 @media screen and (min-width:701px){
@@ -184,13 +169,13 @@ padding:10px 20px 0 20px;overflow:auto
 display:table;margin-bottom:40px
 }
 #siteNav li:hover,#siteNav li.sfhover{
-background:#cccccc
+background:#FFFFFF
 }
 #siteNav .other-section{
 display:block
 }
 #siteNav,#siteNav ul{
-float:left;width:100%;border-style:solid;border-width:1px 0;border-color:#000000;margin:0;line-height:1.2em;background:#F9F9F9
+float:left;width:100%;border-style:solid;border-width:1px 0;border-color:#DDDDDD;margin:0;line-height:1.2em;background:#F9F9F9
 }
 #siteNav ul ul{
 line-height:1.1em
