--- a/nav.css
+++ b/nav.css
@@ -60,73 +60,166 @@ body{padding:0;text-align:center}
 	body #content{background:#FFF}
 	#headerContent{white-space:normal;text-overflow:normal;font-weight:bold}
 }
-/* eXeLearning Style Designer */#content{border-width:0 /*contentBorderWidth*/2px;border-color:/*contentBorderColor*/#ff5656;/*pageWidth*/width:90%;/*wrapperShadowColor*/box-shadow:0 0 15px 0 #e5e5e5;/*contentBGColor*/background-color:#ffffff;}
-#exe-client-search-text{/*searchBarTextColor*/color:#000000;border-color:#ff5656;}
-#exe-client-search-submit{/*searchBarButtonBGColor*/background:#ff5656;border-color:#ff5656;/*searchBarButtonTextColor*/color:#333333;}
-/*useNavigationIcons*//*blackNavigationIcons*/.pagination a span{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0;}
-.pagination a,.pagination a:hover,.pagination a:focus{display:block;position:absolute;right:52px;width:32px;height:32px;padding:0;background:url(_style_icons_black.png) no-repeat 0 0;}
-.pagination .next,.pagination .next:hover,.pagination .next:focus{right:0;background-position:-50px 0;}
-.pagination .print-page,.pagination .print-page:hover,.pagination .print-page:focus{right:104px;background-position:-200px 0;}
-#topPagination{width:50%;min-width:400px;}
-#bottomPagination{height:72px;position:relative;overflow:hidden}
-#bottomPagination a{top:20px;right:72px;margin:0;}
-#bottomPagination .next{right:20px;}
-#nav-toggler a span{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0;}
-#nav-toggler a{display:block;width:32px;height:32px;padding:0;background:url(_style_icons_black.png) no-repeat -100px 0;}
-#nav-toggler a:hover{background:url(_style_icons_black.png) no-repeat -100px 0;}
-#nav-toggler .show-nav{background-position:-150px 0;}
-#nav-toggler .show-nav:hover{background-position:-150px 0;}
-.pagination a,#nav-toggler a{filter:alpha(opacity=70);opacity:.7;}
-.pagination a:hover,.pagination a:focus,#nav-toggler a:hover{filter:alpha(opacity=100);opacity:1;}
-.pagination .page-counter{position:absolute;line-height:32px;padding:0;right:156px;}
-#bottomPagination .page-counter{right:104px;}
-@media all and (max-width: 700px){#nav-toggler{height:32px;}
-#nav-toggler a{padding:0;width:32px;position:absolute;left:50%}
-#siteNav{border-top:1px solid #ddd;}
-.pagination .page-counter{width:300px;left:50%;right:auto;margin-left:-150px}
+/* eXeLearning Style Designer */
+#exe-client-search-text{
+/*searchBarTextColor*/
+color:#000000;border-color:#ffaaaa;
 }
-@media all and (max-width: 400px){.pagination .page-counter{overflow:hidden;clip:rect(0,0,0,0);height:0;}
+#exe-client-search-submit{
+/*searchBarButtonBGColor*/
+background:#ffaaaa;border-color:#ffaaaa;
+/*searchBarButtonTextColor*/
+color:#000000;
 }
-body{/*bodyBGColor*/background-color:#d2d2f7;}
-#siteNav,.pagination a,#skipNav,#nav-toggler{/*navFontSize*/font-size:105%;}
-#siteNav,#siteNav a{/*navBGColor*/background-color:#f9f9d6;/*navAColor*/color:#ff0000;/*navBorderColor*/border-color:#ff5656;}
-@media screen and (min-width: 701px) and (max-width: 1015px){#siteNav,#siteNav ul{background-color:#f9f9d6;border-color:#ff5656;}
-#siteNav li{background-color:#f9f9d6;}
+/*useNavigationIcons*/
+/*blackNavigationIcons*/
+.pagination a span{
+position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0;
 }
-#siteNav a:hover,#siteNav a:focus,#siteNav a.active{/*navHoverBGColor*/background-color:#ffd6ff;/*navAHoverColor*/color:#005fbf;}
-@media screen and (min-width: 701px) and (max-width: 1015px){#siteNav li:hover,#siteNav li.sfhover{background-color:#ffd6ff;}
+.pagination a,.pagination a:hover,.pagination a:focus{
+display:block;position:absolute;right:52px;width:32px;height:32px;padding:0;background:url(_style_icons_black.png) no-repeat 0 0;
 }
-.pagination{border-color:#dddddd;}
-#bottomPagination{background-color:#ffffff;}
-/* eXeLearning Style Designer (custom CSS) */
-.pagination .print-page{
-display:none;
+.pagination .next,.pagination .next:hover,.pagination .next:focus{
+right:0;background-position:-50px 0;
 }
-/* === NAV.CSS - ESTILOS DE NAVEGACIÓN === */
-
-/* Mejorar menú lateral */
-.navigation {
-    background-color: #34495e;
+.pagination .print-page,.pagination .print-page:hover,.pagination .print-page:focus{
+right:104px;background-position:-200px 0;
 }
-
-/* Estilos para ítems del menú */
-.nav-item {
-    border-bottom: 1px solid #2c3e50;
+#topPagination{
+width:50%;min-width:400px;
 }
-
-.nav-item a {
-    color: #ecf0f1;
-    padding: 12px 15px;
-    display: block;
-    text-decoration: none;
+#bottomPagination{
+height:72px;position:relative;overflow:hidden
 }
-
-.nav-item a:hover {
-    background-color: #3498db;
-    color: white;
+#bottomPagination a{
+top:20px;right:72px;margin:0;
 }
-
-/* Estilo para el ítem activo */
-.nav-item.active {
-    background-color: #2980b9;
+#bottomPagination .next{
+right:20px;
+}
+#nav-toggler a span{
+position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0;
+}
+#nav-toggler a{
+display:block;width:32px;height:32px;padding:0;background:url(_style_icons_black.png) no-repeat -100px 0;
+}
+#nav-toggler a:hover{
+background:url(_style_icons_black.png) no-repeat -100px 0;
+}
+#nav-toggler .show-nav{
+background-position:-150px 0;
+}
+#nav-toggler .show-nav:hover{
+background-position:-150px 0;
+}
+.pagination a,#nav-toggler a{
+filter:alpha(opacity=70);opacity:.7;
+}
+.pagination a:hover,.pagination a:focus,#nav-toggler a:hover{
+filter:alpha(opacity=100);opacity:1;
+}
+.pagination .page-counter{
+position:absolute;line-height:32px;padding:0;right:156px;
+}
+#bottomPagination .page-counter{
+right:104px;
+}
+@media all and (max-width: 700px){
+#nav-toggler{
+height:32px;
+}
+#nav-toggler a{
+padding:0;width:32px;position:absolute;left:50%
+}
+#siteNav{
+border-top:1px solid #ddd;
+}
+.pagination .page-counter{
+width:300px;left:50%;right:auto;margin-left:-150px
+}
+}
+@media all and (max-width: 400px){
+.pagination .page-counter{
+overflow:hidden;clip:rect(0,0,0,0);height:0;
+}
+}
+#topPagination .page-counter{
+color:#000000;
+}
+#siteNav,.pagination a,#skipNav,#nav-toggler{
+/*navFontSize*/
+font-size:110%;
+}
+#siteNav,#siteNav a{
+/*navAColor*/
+color:#000000;
+}
+.pagination{
+border-color:#dddddd;
+}
+#bottomPagination .page-counter{
+color:#0a0000;
+}
+/*horizontalNavigation*/
+@media screen and (min-width:701px){
+#main,.no-nav #main{
+padding:10px 20px 0 20px;overflow:auto
+}
+#siteNav{
+display:table;margin-bottom:40px
+}
+#siteNav li:hover,#siteNav li.sfhover{
+background:#FFFFFF
+}
+#siteNav .other-section{
+display:block
+}
+#siteNav,#siteNav ul{
+float:left;width:100%;border-style:solid;border-width:1px 0;border-color:#DDDDDD;margin:0;line-height:1.2em;background:#F9F9F9
+}
+#siteNav ul ul{
+line-height:1.1em
+}
+#siteNav{
+margin-bottom:20px;position:relative;z-index:999;border-top:none;padding-right:0
+}
+#siteNav a{
+padding:.6em 15px;border:none
+}
+#siteNav li{
+float:left
+}
+#siteNav li ul{
+position:absolute;left:-999em;height:auto;width:14.4em;width:13.9em;border-width:0.25em
+}
+* html #siteNav li ul{
+width:13em
+}
+#siteNav li li{
+width:13.9em
+}
+#siteNav li ul a,#siteNav li ul ul a{
+padding:.45em 15px
+}
+#siteNav li ul ul{
+margin:-2.15em 0 0 14em
+}
+* html #siteNav li ul ul{
+margin-left:13em
+}
+#siteNav li:hover ul ul,#siteNav li:hover ul ul ul,#siteNav li.sfhover ul ul,#siteNav li.sfhover ul ul ul{
+left:-999em
+}
+#siteNav li:hover ul,#siteNav li li:hover ul,#siteNav li li li:hover ul,#siteNav li.sfhover ul,#siteNav li li.sfhover ul,#siteNav li li li.sfhover ul{
+left:auto
+}
+#siteNav .daddy{
+position:relative
+}
+#siteNav .daddy span{
+display:inline;position:absolute;right:1em;font-size:.8em
+}
+#toggle-nav{
+display:none!important
+}
 }
